Move corporate project below e-commerce, same layout

--- a/index.html
+++ b/index.html
@@ -180,28 +180,26 @@ aria-label='' role="img"> </div> </div> <div class='t396__elem tn-elem tn-elem__
 src='https://static.tildacdn.com/tild3135-6433-4537-b566-316336626238/_.svg'
 alt='' imgfield='tn_img_1711825386744'
 /> </a> </div> <div class='t396__elem tn-elem tn-elem__7273962121711784761985' data-elem-id='1711784761985' data-elem-type='text' data-field-top-value="486" data-field-left-value="31" data-field-height-value="10" data-field-width-value="411" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-textfit-value="autoheight" data-field-fontsize-value="10" data-field-top-res-320-value="592" data-field-left-res-320-value="10" data-field-fontsize-res-320-value="8" data-field-top-res-480-value="805" data-field-left-res-480-value="10" data-field-top-res-640-value="805" data-field-left-res-640-value="10" data-field-top-res-960-value="486" data-field-left-res-960-value="10"> <div class='tn-atom'field='tn_text_1711784761985'>By submitting a request, you have <span style="color: rgb(255, 92, 92);">a great chance</span> to get an awesome project</div> </div> </div> </div> <script>t_onFuncLoad('t396_initialScale',function() {t396_initialScale('727396212');});t_onReady(function() {t_onFuncLoad('t396_init',function() {t396_init('727396212');});});</script> <!-- /T396 --> </div> <div id="rec727868979" class="r t-rec" style=" " data-record-type="215"> <a name="case" style="font-size:0;"></a> </div> <div id="rec727402275" class="r t-rec" style=" " data-animationappear="off" data-record-type="396"> <style>
-#rec727402275 .tn-elem[data-elem-id='176138942805440430']{top:802px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942804277880']{top:1212px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942801487790']{top:1214px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942802516890']{top:1214px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942804825880']{top:1253px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942800780720']{top:1264px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942802023180']{top:1264px!important}
-#rec727402275 .tn-elem[data-elem-id='176138942803094150']{top:1314px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559381019270']{top:800px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559379935720']{top:1338px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559377251640']{top:1339px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559378224180']{top:1339px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:1379px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559376440240']{top:1389px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559377771170']{top:1389px!important}
-#rec727402275 .tn-elem[data-elem-id='175863559378768540']{top:1439px!important}
-#rec727402275 .tn-elem[data-elem-id='1768633889708']{display:none!important}
-#rec727402275 .tn-elem[data-elem-id='1768633928504000003']{display:none!important}
-#rec727402275 .tn-elem[data-elem-id='1768633118121']{display:none!important}
-#rec727402275 .t396__artboard{height:1500px!important}
-#rec727402275 .t396__filter{height:1500px!important}
-#rec727402275 .t396__carrier{height:1500px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559381019270']{top:1400px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559379935720']{top:1810px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377251640']{top:1812px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378224180']{top:1812px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:1851px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559376440240']{top:1862px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377771170']{top:1862px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378768540']{top:1912px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559381019270']{left:calc(50% - 600px + 30px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559379935720']{left:calc(50% - 600px + 30px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559380546650']{left:calc(50% - 600px + 30px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377251640']{left:calc(50% - 600px + 531px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378224180']{left:calc(50% - 600px + 901px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559376440240']{left:calc(50% - 600px + 531px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377771170']{left:calc(50% - 600px + 901px)!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378768540']{left:calc(50% - 600px + 391px)!important}
+#rec727402275 .t396__artboard{height:2050px!important}
+#rec727402275 .t396__filter{height:2050px!important}
+#rec727402275 .t396__carrier{height:2050px!important}
+</style>
 </style>
 <style>#rec727402275 .tn-elem[data-elem-id='1711788503815']{display:none!important}
 #rec727402275 .tn-elem[data-elem-id='1711788503843']{display:none!important}
