Move ecommerce and corporate projects up to close gap from hidden projects

--- a/index.html
+++ b/index.html
@@ -180,9 +180,25 @@ aria-label='' role="img"> </div> </div> <div class='t396__elem tn-elem tn-elem__
 src='https://static.tildacdn.com/tild3135-6433-4537-b566-316336626238/_.svg'
 alt='' imgfield='tn_img_1711825386744'
 /> </a> </div> <div class='t396__elem tn-elem tn-elem__7273962121711784761985' data-elem-id='1711784761985' data-elem-type='text' data-field-top-value="486" data-field-left-value="31" data-field-height-value="10" data-field-width-value="411" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-textfit-value="autoheight" data-field-fontsize-value="10" data-field-top-res-320-value="592" data-field-left-res-320-value="10" data-field-fontsize-res-320-value="8" data-field-top-res-480-value="805" data-field-left-res-480-value="10" data-field-top-res-640-value="805" data-field-left-res-640-value="10" data-field-top-res-960-value="486" data-field-left-res-960-value="10"> <div class='tn-atom'field='tn_text_1711784761985'>By submitting a request, you have <span style="color: rgb(255, 92, 92);">a great chance</span> to get an awesome project</div> </div> </div> </div> <script>t_onFuncLoad('t396_initialScale',function() {t396_initialScale('727396212');});t_onReady(function() {t_onFuncLoad('t396_init',function() {t396_init('727396212');});});</script> <!-- /T396 --> </div> <div id="rec727868979" class="r t-rec" style=" " data-record-type="215"> <a name="case" style="font-size:0;"></a> </div> <div id="rec727402275" class="r t-rec" style=" " data-animationappear="off" data-record-type="396"> <style>
-#rec727402275 .t396__artboard{height:3200px!important}
-#rec727402275 .t396__filter{height:3200px!important}
-#rec727402275 .t396__carrier{height:3200px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942805440430']{top:822px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942804277880']{top:1232px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942801487790']{top:1234px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942802516890']{top:1234px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942804825880']{top:1273px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942800780720']{top:1284px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942802023180']{top:1284px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942803094150']{top:1334px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559381019270']{top:1404px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559379935720']{top:1942px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377251640']{top:1943px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378224180']{top:1943px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:1983px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559376440240']{top:1993px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559377771170']{top:1993px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559378768540']{top:2043px!important}
+#rec727402275 .t396__artboard{height:2193px!important}
+#rec727402275 .t396__filter{height:2193px!important}
+#rec727402275 .t396__carrier{height:2193px!important}
 </style>
 <style>#rec727402275 .tn-elem[data-elem-id='1711788503815']{display:none!important}
 #rec727402275 .tn-elem[data-elem-id='1711788503843']{display:none!important}
