Move e-commerce project to right side (where corporate was)

--- a/index.html
+++ b/index.html
@@ -204,6 +204,14 @@ alt='' imgfield='tn_img_1711825386744'
 #rec727402275 .tn-elem[data-elem-id='175863559376440240']{left:calc(50% - 600px + 531px)!important}
 #rec727402275 .tn-elem[data-elem-id='175863559377771170']{left:calc(50% - 600px + 391px)!important}
 #rec727402275 .tn-elem[data-elem-id='175863559378768540']{left:calc(50% - 600px + 390px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942805440430']{left:calc(50% - 600px + 540px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942804277880']{left:calc(50% - 600px + 540px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942801487790']{left:calc(50% - 600px + 1041px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942802516890']{left:calc(50% - 600px + 901px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942804825880']{left:calc(50% - 600px + 540px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942800780720']{left:calc(50% - 600px + 1041px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942802023180']{left:calc(50% - 600px + 901px)!important}
+#rec727402275 .tn-elem[data-elem-id='176138942803094150']{left:calc(50% - 600px + 901px)!important}
 #rec727402275 .t396__artboard{height:2193px!important}
 #rec727402275 .t396__filter{height:2193px!important}
 #rec727402275 .t396__carrier{height:2193px!important}
