--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@ alt='' imgfield='tn_img_1711825386744'
 #rec727402275 .tn-elem[data-elem-id='176138942800780720']{left:calc(50% - 600px + 1041px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942802023180']{left:calc(50% - 600px + 901px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942803094150']{left:calc(50% - 600px + 901px)!important}
+#rec727402275 .tn-elem[data-elem-id='1768633889708']{top:620px!important}
+#rec727402275 .tn-elem[data-elem-id='1768633928504000003']{top:623px!important}
+#rec727402275 .tn-elem[data-elem-id='1768633118121']{top:700px!important}
+#rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:2030px!important}
 #rec727402275 .t396__artboard{height:2193px!important}
 #rec727402275 .t396__filter{height:2193px!important}
 #rec727402275 .t396__carrier{height:2193px!important}
