Hide AI integration element, narrow corporate description to prevent overlap

--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@ alt='' imgfield='tn_img_1711825386744'
 #rec727402275 .tn-elem[data-elem-id='176138942803094150']{left:calc(50% - 600px + 901px)!important}
 #rec727402275 .tn-elem[data-elem-id='1768633889708']{top:620px!important}
 #rec727402275 .tn-elem[data-elem-id='1768633928504000003']{top:623px!important}
-#rec727402275 .tn-elem[data-elem-id='1768633118121']{top:700px!important}
 #rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:2030px!important}
+#rec727402275 .tn-elem[data-elem-id='1768633118121']{display:none!important}
+#rec727402275 .tn-elem[data-elem-id='175863559380546650']{width:480px!important}
 #rec727402275 .t396__artboard{height:2193px!important}
 #rec727402275 .t396__filter{height:2193px!important}
 #rec727402275 .t396__carrier{height:2193px!important}
