--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@ alt='' imgfield='tn_img_1711825386744'
 #rec727402275 .tn-elem[data-elem-id='176138942804277880']{left:calc(50% - 600px + 540px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942801487790']{left:calc(50% - 600px + 1041px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942802516890']{left:calc(50% - 600px + 901px)!important}
-#rec727402275 .tn-elem[data-elem-id='176138942804825880']{left:calc(50% - 600px + 540px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942800780720']{left:calc(50% - 600px + 1041px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942802023180']{left:calc(50% - 600px + 901px)!important}
 #rec727402275 .tn-elem[data-elem-id='176138942803094150']{left:calc(50% - 600px + 901px)!important}
@@ -217,6 +216,7 @@ alt='' imgfield='tn_img_1711825386744'
 #rec727402275 .tn-elem[data-elem-id='175863559380546650']{top:2030px!important}
 #rec727402275 .tn-elem[data-elem-id='1768633118121']{display:none!important}
 #rec727402275 .tn-elem[data-elem-id='175863559380546650']{width:480px!important}
+#rec727402275 .tn-elem[data-elem-id='176138942804825880']{left:calc(50% - 600px + 540px)!important;width:350px!important}
 #rec727402275 .t396__artboard{height:2193px!important}
 #rec727402275 .t396__filter{height:2193px!important}
 #rec727402275 .t396__carrier{height:2193px!important}
